# coursework

./: .gitignore
appProg/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  Utils.cs  appProg.csproj  appProg.sln  cafeMenu.sln  dishDetailForm.cs  orderForm.Designer.cs
appProg/Controls/: Gallery.cs
appProg/Forms/: AboutForm.Designer.cs  AboutForm.cs  MainForm.Designer.cs  MainForm.cs  dishDetailForm.Designer.cs  dishDetailForm.cs  dishDetailForm.resx  orderForm.Designer.cs  orderForm.cs  orderForm.resx  pinForm.Designer.cs  pinForm.cs
appProg/Models/: detailDish.cs  dishInOrder.cs  orderDish.cs  prewiewDish.cs
appProg/MySQL/: DB.cs  printOrder.cs
appProg/Other/: PDFGenerator.cs  Security.cs  Utils.cs  crypt.cs
appProg/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
appProg/mysql/create tables/: images.sql
appProg/src/: app.cpp  app.h
dataBase/: gulpfile.js
dataBase/mysql/dump/: 1703.sql  1703_check.sql  1803.sql  1903.sql
dataBase/php/app/: classes.php  header.php  routes.php
dataBase/php/public/: index.html  index.php  order.html  order.print.html  orders.html  producers.create.html  producers.edit.html  producers.editor.html  producers.list.html  products.create.html  products.edit.html  products.editor.html  products.list.html  stores.create.html  stores.edit.html  stores.editor.html  stores.list.html
dataBase/src/css/: main.css
dataBase/src/js/: core.js
dataBase/src/template/: core.html  footer.html  head.html  head_print.html  (+1 more)
(+22 files in other folders)
